Fix menu sub-sections vertical spacing for readability
Ensure that the menu sub-section titles are closer to the sub-section
items than they are the last item is to the next sub-section title.

Ensure that the action items are clickable from one edge of the menu
to the other (like standard menu items).

Increase the menu items size (area).

See https://lawsofux.com/law-of-proximity
and https://lawsofux.com/fittss-law

--- a/securedrop_client/resources/css/source_menu.css
+++ b/securedrop_client/resources/css/source_menu.css
@@ -1,18 +1,18 @@
 QMenu {
     font-family: 'Source Sans Pro';
-    padding: 1em 0.5em;
+    padding: 0.5em 0 0.5em;
     font-size: 16px;
 }
 
 QMenu::separator {
-    padding: 1em 0.25em;
+    margin: 0.75em 1.75em 0.5em 1.675em;
+    height: 1em;
     font-weight: 900;
     color: #b8c0de;
 }
 
 QMenu::item {
-    padding: 0.25em 1em 0.25em 1.25em;
-    margin: 0.25em 0 0 0;
+    padding: 0.5em 2em;
 }
 
 QMenu::item:selected {
